# docforge

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_SUMMARY.md  PACKAGING_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SETUP_SECURITY.md  docforge.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start_docforge.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  template_request.yml
.github/workflows/: approval-required.yml  ci.yml  codeql.yml  dependabot.yml  release.yml  scheduled.yml
backend/app/core/: __init__.py  simple_config.py
backend/app/services/: local_storage_service.py  openai_service.py
docforge/: __init__.py  docforge.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  INSTALLATION.md
examples/: README.md
examples/ai-chatbot-for-customer-service/: README.md
prompts/: architecture.md  business_case.md  charter.md  deployment.md  design.md  market_requirements.md  operations.md  requirements.md  testing.md  vision_brief.md
scripts/: package_verification.py
tests/: conftest.py  test_basic.py  test_cli.py  test_services.py
